# autorand-rs

./: .gitignore  .travis.yml  Cargo.toml
autorand-derive/: Cargo.toml
autorand-derive/src/: lib.rs
ci/: test.sh
src/: lib.rs
test_crate/: Cargo.toml
test_crate/src/: lib.rs
