[package]
name = "autorand"
version = "0.1.1"
authors = ["Mike Lubinets <public@mersinvald.me>"]
description = "Automatic random generation for any struct or enum. Make your fuzzing easier!"
repository = "https://github.com/mersinvald/autorand-rs"
edition = "2018"

[dependencies]
rand = "0.6"
autorand-derive = { version = "0.1", path = "./autorand-derive" }

[workspace]
members = [
    "autorand-derive",
    "test_crate"
]