[package]
name = "autorand"
version = "0.2.2"
authors = ["Mike Lubinets <public@mersinvald.me>"]
description = "Automatic random generation for any struct or enum. Make your fuzzing easier!"
repository = "https://github.com/mersinvald/autorand-rs"
license = "MIT"
edition = "2018"

[dependencies]
rand = "0.6"
autorand-derive = { version = "0.2", path = "./autorand-derive" }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["serde_json"]
json-value-always-null = ["json"]
limited-integers = []

[workspace]
members = [
    "autorand-derive",
    "test_crate"
]
