[package]
name = "autorand-derive"
version = "0.1.1"
authors = ["Mike Lubinets <public@mersinvald.me>"]
description = "Custom derive for autorant crate. You don't need to use this crate directly."
repository = "https://github.com/mersinvald/autorand-rs"
license = "MIT"
edition = "2018"

[lib]
doctest = false
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
